Fix some spacing styles, 'Top comments' section

--- a/css/post/_post-aside-left.scss
+++ b/css/post/_post-aside-left.scss
@@ -34,6 +34,11 @@
     color: rgb(112, 112, 112);
 }
 
+.top__comments {
+    font-size: 16px;
+
+}
+
 .post__title {
     font-size: 28px;
     font-weight: bolder;
@@ -90,7 +95,7 @@
     .top__comments {
         font-size: 24px;
         margin-left: 20px;
-        margin-bottom: 30px;
+        margin-bottom: 18px;
     }
 }
 
