--- a/css/post/_post.scss
+++ b/css/post/_post.scss
@@ -38,3 +38,136 @@ main {
     font-size: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+// Aquí irá el aside izquierdo
+
+.sidebar-nav {
+    list-style-type: none;
+}
+
+.author-name-styles:hover {
+    background-color: rgb(244, 244, 245);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.profile-name-pointer {
+    cursor: pointer !important;
+}
+
+.profile-pic-bg {
+    width: 40px;
+    height: 40px;
+}
+
+.profile-pic-front {
+    width: 24px;
+    height: 24px;
+    margin-left: 15px;
+    border-radius: 50%;
+}
+
+.multiple__reactions {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2.2em;
+    min-height: 40px;
+    color: rgb(112, 112, 112);
+}
+
+.post__title {
+    font-size: 28px;
+    font-weight: bolder;
+    color: black !important;
+}
+
+.follow-bttn:hover {
+    background-color: rgb(45, 110, 253);
+    color: white;
+}
+
+.subscribe-bttn {
+    font-size: 12px !important;
+}
+
+.subscribe-bttn:hover {
+    background-color: rgb(244, 244, 244) !important;
+}
+
+.btn-size {
+    width: 33px !important;
+    height: 30px !important;
+}
+
+.dropdown-font-size {
+    font-size: 12px;
+}
+
+.dropdown-menu {
+    width: 295px !important;
+    height: 222px !important;
+}
+
+.dropdown-header--fontsize {
+    font-size: 14px;
+}
+
+.dropdown-item--fontsize {
+    font-size: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+
+    .main__container,
+    .comments__container,
+    .reaction__section {
+        padding: 32px 48px;
+    }
+
+    .reaction__section {
+        padding: 0 48px;
+    }
+
+    .top__comments {
+        font-size: 24px;
+        margin-left: 20px;
+        margin-bottom: 30px;
+    }
+}
+
+.textarea-comment__width {
+    width: 100% !important;
+}
+
+.reaction__section {
+    button {
+        background-color: unset;
+    }
+
+    a {
+        img {
+            fill-opacity: 0.25;
+        }
+
+        p {
+            color: rgb(112, 112, 112);
+        }
+    }
+}
+
+.reaction__section {
+    button :hover {
+        background-color: rgb(244, 244, 245);
+        border-radius: 5px;
+    }
+}
+
+.reaction__comment--fontsize {
+    font-size: 12px;
+}
+
+
+// .edited-comment-date {
+//     Spacing, ajustar
+//     June 15 · Edited on June 15
+// }
